// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","cascadeInput":false,"removeYPadding":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","cascadeInput":false,"removeYPadding":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","cascadeInput":true,"removeYPadding":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"col-span-full md:col-auto\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","cascadeInput":true,"removeYPadding":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16\\">
  <div class=\\"col-span-full md:col-auto\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"base","cascadeInput":false,"removeYPadding":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"base","cascadeInput":false,"removeYPadding":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"base","cascadeInput":true,"removeYPadding":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"col-span-full md:col-auto\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"base","cascadeInput":true,"removeYPadding":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20\\">
  <div class=\\"col-span-full md:col-auto\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"small","cascadeInput":false,"removeYPadding":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"small","cascadeInput":false,"removeYPadding":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"small","cascadeInput":true,"removeYPadding":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"col-span-full md:col-auto\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"small","cascadeInput":true,"removeYPadding":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16\\">
  <div class=\\"col-span-full md:col-auto\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"wide","cascadeInput":false,"removeYPadding":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"wide","cascadeInput":false,"removeYPadding":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"wide","cascadeInput":true,"removeYPadding":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"col-span-full md:col-auto\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"wide","cascadeInput":true,"removeYPadding":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24\\">
  <div class=\\"col-span-full md:col-auto\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"x-small","cascadeInput":false,"removeYPadding":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"x-small","cascadeInput":false,"removeYPadding":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"x-small","cascadeInput":true,"removeYPadding":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"col-span-full md:col-auto\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"x-small","cascadeInput":true,"removeYPadding":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12\\">
  <div class=\\"col-span-full md:col-auto\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"xx-small","cascadeInput":false,"removeYPadding":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"xx-small","cascadeInput":false,"removeYPadding":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"xx-small","cascadeInput":true,"removeYPadding":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"col-span-full md:col-auto\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":"xx-small","cascadeInput":true,"removeYPadding":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8\\">
  <div class=\\"col-span-full md:col-auto\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":null,"cascadeInput":false,"removeYPadding":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":null,"cascadeInput":false,"removeYPadding":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":null,"cascadeInput":true,"removeYPadding":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"col-span-full md:col-auto\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;

exports[`[[ InputWrapper ]] renders \`InputWrapper\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","inputWidth":null,"cascadeInput":true,"removeYPadding":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16\\">
  <div class=\\"col-span-full md:col-auto\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
</div>"
`;
